[tool.poetry]
name = "Location_ISS"
version = "0.1.0"
description = ""
authors = ["Tiago Reiss <Tiago.B.C.Reis@hotmail.com>"]
readme = "README.md"
#packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonlib = "1.1.0"
#turtle = "latest"
urllib3 = "latest"
times = "latest"
#pycopy-webbrowser = "latest"
geocoder = "latest"
ISS_Info ="latest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"